# SegmentationFault

./: CMakeLists.txt  functions.cpp  functions.h  main.cpp  main_bug.cpp
code/: booleans.cpp  booleans.h
code/triangles_intersections/: CMakeLists.txt  main.cpp  orientTemplated.cpp  orientTemplated.h  printIntersections.cpp  printIntersections.h  test.txt  tri_tri_intersect.cpp  tri_tri_intersect.h
code/triangles_intersections/Tests/Two-Spheres/: CMakeLists.txt  main.cpp
rationals_code/: intersect_custom.cpp  intersect_custom.h  intersect_point_rationals.h  rationals.cpp  rationals.h
